[package]
name = "alt-demo"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "alt-demo"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.10.29"
solana-client = "1.10.29"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.4", features = ["no-entrypoint"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
shellexpand = "2.1.0"
solana-address-lookup-table-program = "1.10.1"
anyhow = "1.0.58"
bincode = "1.3.3"
serde_json = "1.0.82"
base64 = "0.13.0"
solana-transaction-status = "1.11.1"
reqwest = "0.11.11"